# axum-seaorm-backend

./: Cargo.toml
api/: Cargo.toml
api/src/: lib.rs
entity/: Cargo.toml
entity/src/: bakery.rs  chef.rs  lib.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240315_000001_create_bakery_table.rs  m20240315_000002_create_chef_table.rs
service/: Cargo.toml
service/src/: lib.rs  mutation.rs  query.rs
src/: main.rs
