[package]
name = "app-backend"
version = "0.1.0"
authors = ["Renz de Veyra <rdadeveyra@gmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "api", "service", "entity", "migration"]

[dependencies]
app-backend-api = { path = "api" }