[package]
name = "app-backend-api"
version = "0.1.0"
authors = ["Renz de Veyra <rdadeveyra@gmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app-backend-service = { path = "../service" }
tokio = { version = "1.34.0", features = ["full"] }
axum = "0.7.1"
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["fs"] }
tower-cookies = "0.10.0"
futures = "0.3.30"
sea-orm = { version = "0.12.14", features = ["sqlx-postgres", "runtime-async-std-native-tls", "macros", "mock"] }
dotenvy = "0.15.7"
serde = "1.0.193"
serde_json = "1.0.108"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
entity = { path = "../entity" }
migration = { path = "../migration" }